--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,12 @@ export(mysql_exists)
 export(mysql_read)
 export(mysql_write)
 export(read_sampled_log)
+export(sample_size_effect)
+export(sample_size_odds)
 export(set_proxies)
 export(to_log)
 export(to_mediawiki)
+importFrom(pwr,pwr.chisq.test)
 importFrom(urltools,url_decode)
 importMethodsFrom(RMySQL,dbClearResult)
 importMethodsFrom(RMySQL,dbConnect)
