--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ export(read_sampled_log)
 export(sample_size_effect)
 export(sample_size_odds)
 export(set_proxies)
+export(theme_fivethirtynine)
 export(to_log)
 export(to_mediawiki)
+import(ggplot2)
+import(ggthemes)
 importFrom(pwr,pwr.chisq.test)
 importFrom(urltools,url_decode)
 importMethodsFrom(RMySQL,dbClearResult)
