Add compatibility for RMySQL 0.9.4+
Also adds ability to reuse a connection object to make running multiple
queries more efficient (rather than opening and closing temporary
connections). Prints a helpful message after fetching data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(from_mediawiki)
 export(get_logfile)
 export(global_query)
 export(hive_query)
+export(mysql_close)
+export(mysql_connect)
+export(mysql_disconnect)
 export(mysql_exists)
 export(mysql_read)
 export(mysql_write)
