--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: wmf
 Type: Package
 Title: R Code for Wikimedia Foundation Internal Usage
-Version: 0.2.2
-Date: 2016-08-25
+Version: 0.2.3
+Date: 2016-09-19
 Authors@R: c(
   person("Oliver", "Keyes", email = "oliver@wikimedia.org", role = "cre"),
   person("Mikhail", "Popov", email = "mpopov@wikimedia.org", role = "aut"))
 Description: More about what it does (maybe more than one line).
-License: What license is it under?
+License: Uhhhhh
 LazyData: TRUE
 Imports:
     RMySQL,
