Add functions for working with interleaved experiments
- Functions for working with interleaved search results experiments;
  see `?interleaved` for details
    - `interleaved_preference()` calculates the preference statistic from
      click data according to Eq. 4 from Chapelle et al. (2012) paper on
      interleaved search evaluation
   - `interleaved_bootstraps()` resamples sessions with replacement to
     generate a sample of preferences
   - `interleaved_confint()` computes a confidence interval from a
     bootstrapped sample of preferences
   - These require a C++11-compatible compiler
- C++-based `exact_binomial()` to estimate sample size for exact
  binomial tests
- Misc. things changed with this patch:
  - ggplot themes `theme_min()` and `theme_facet()`
  - Documentation updates (including a vignette on interleaved experiments)
  - Syntax-checking unit test
  - MIT licensing

Bug: T150032
Change-Id: Ie6aa90fad2b25a07b200a2c822f5a34227cca8c8

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,13 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^\.Rhistory$
+^man-roxygen$
+^data-raw$
+^cran-comments\.md$
+^README.Rmd
 ^CONDUCT\.md$
+^README_cache$
+^\.travis.yml$
+^appveyor.yml$
+^.*\.gitreview$
+^\.lintr$
