Add function 'null2na'
Change-Id: Id149be60ae41c9f09d81b91aaf6a1ee9ecc8db3b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(mysql_disconnect)
 export(mysql_exists)
 export(mysql_read)
 export(mysql_write)
+export(null2na)
 export(query_hive)
 export(read_sampled_log)
 export(rewrite_conditional)
