--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,10 @@ export(mysql_exists)
 export(mysql_read)
 export(mysql_write)
 export(null2na)
+export(parse_json)
 export(query_hive)
 export(read_sampled_log)
+export(refine_eventlogs)
 export(rewrite_conditional)
 export(set_proxies)
 export(theme_facet)
