--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,13 @@ export(date_clause)
 export(exact_binom)
 export(from_log)
 export(from_mediawiki)
+export(geom_flat_violin)
 export(get_logfile)
 export(global_query)
 export(interleaved_bootstraps)
 export(interleaved_confint)
 export(interleaved_preference)
+export(invert_list)
 export(mysql_close)
 export(mysql_connect)
 export(mysql_disconnect)
@@ -20,6 +22,8 @@ export(mysql_read)
 export(mysql_write)
 export(null2na)
 export(parse_json)
+export(percent2)
+export(pretty_num)
 export(query_hive)
 export(read_sampled_log)
 export(refine_eventlogs)
