Add color palettes based on Wikimedia Design Style Guide
Change-Id: I38777ceb818c9defde0d6a26237bf0e5a134e10d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,12 @@
 export(build_query)
 export(chisq_test_effect)
 export(chisq_test_odds)
+export(colors_accent)
+export(colors_base)
+export(colors_discrete)
+export(colors_utility)
 export(date_clause)
+export(display_palettes)
 export(exact_binom)
 export(from_log)
 export(from_mediawiki)
