--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(colors_utility)
 export(date_clause)
 export(display_palettes)
 export(exact_binom)
+export(extract_ymd)
 export(from_log)
 export(from_mediawiki)
 export(geom_flat_violin)
