Update for sharding setup
Bug: T212386
Change-Id: I8f24e06829e70be0ce049b1a30febe4590f2be46

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(colors_accent)
 export(colors_base)
 export(colors_discrete)
 export(colors_utility)
+export(connection_details)
 export(date_clause)
 export(display_palettes)
 export(exact_binom)
@@ -40,6 +41,7 @@ export(theme_fivethirtynine)
 export(theme_min)
 export(to_log)
 export(to_mediawiki)
+export(update_shardmap)
 export(write_conditional)
 import(ggplot2)
 import(ggthemes)
