--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,21 @@
 Package: wmf
 Type: Package
 Title: R Code for Wikimedia Foundation Internal Usage
-Version: 0.7.1
-Date: 2019-02-19
+Version: 0.8.0
+Date: 2019-12-03
 Authors@R: c(
     person("Mikhail", "Popov", email = "mikhail@wikimedia.org", role = c("aut", "cre")),
-    person("Oliver", "Keyes", role = "aut", comment = "No longer employed at the Foundation"),
-    person("Chelsy", "Xie", email = "cxie@wikimedia.org", role = "ctb")
+    person("Os", "Keyes", role = "aut", comment = "No longer employed at the Foundation"),
+    person("Chelsy", "Xie", role = "ctb", comment = "No longer employed at the Foundation"),
+    person(family = "Wikimedia Foundation", role = "cph")
     )
 Description: This package contains functions made for Analysts at Wikimedia
     Foundation, but can be used by people outside of the Foundation.
 License: MIT + file LICENSE
-URL: https://phabricator.wikimedia.org/diffusion/1821/
-BugReports: https://phabricator.wikimedia.org/maniphest/task/create/?
-    projects=Product-Analytics
+URL: https://gerrit.wikimedia.org/r/plugins/gitiles/wikimedia/discovery/wmf/
+BugReports: https://phabricator.wikimedia.org/maniphest/task/create/?projects=Product-Analytics&assigned=mpopov
 Depends: R (>= 3.1.0)
 Imports:
-    devtools,
     ggthemes (>= 3.4.0),
     ggplot2,
     jsonlite,
@@ -24,7 +23,6 @@ Imports:
     progress,
     purrr,
     pwr,
-    Rcpp (>= 0.10.3),
     readr,
     RMySQL,
     tibble,
@@ -32,20 +30,13 @@ Imports:
     magrittr,
     zeallot
 Suggests:
-    lintr,
-    testthat,
-    knitr,
-    rmarkdown,
     dplyr,
+    knitr,
+    lintr (>= 2.0.0),
+    roxygen2 (>= 7.0.0),
+    testthat,
     tidyr
-LinkingTo:
-    BH,
-    Rcpp,
-    RcppArmadillo (>= 0.3.810)
-NeedsCompilation: yes
-SystemRequirements: C++11
 LazyData: TRUE
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
-VignetteBuilder: knitr
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
