--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: wmf
+Package: wmfdata
 Type: Package
 Title: R Code for Wikimedia Foundation Internal Usage
-Version: 0.8.2
+Version: 0.9.0
 Date: 2020-08-18
 Authors@R: c(
     person("Mikhail", "Popov", email = "mikhail@wikimedia.org", role = c("aut", "cre")),
