--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: wmfdata
 Type: Package
 Title: R Tools For Wikimedia Foundation's Analysts And Data Scientists
-Version: 0.9.0
-Date: 2020-08-18
+Version: 0.9.1
+Date: 2020-08-25
 Authors@R: c(
     person("Mikhail", "Popov", email = "mikhail@wikimedia.org", role = c("aut", "cre")),
     person("Os", "Keyes", role = "aut", comment = "No longer employed at the Foundation"),
@@ -12,8 +12,8 @@ Authors@R: c(
 Description: This package contains functions made for Analysts and Scientists at
     the Wikimedia Foundation.
 License: MIT + file LICENSE
-URL: https://gerrit.wikimedia.org/r/plugins/gitiles/wikimedia/discovery/wmf/
-BugReports: https://phabricator.wikimedia.org/maniphest/task/create/?projects=Product-Analytics&assigned=mpopov
+URL: https://gerrit.wikimedia.org/g/wikimedia/discovery/wmf/
+BugReports: https://phabricator.wikimedia.org/maniphest/task/create/?projects=Product-Analytics&assigned=mpopov&title=wmfdata-r
 Depends: R (>= 3.1.0)
 Imports:
     dplyr,
